Updated gitignore, restructured build.gradle